# PaisaPal

./: .env.example  .gitignore  README.md  pyproject.toml
backend/paisapal/: __init__.py  main.py
backend/paisapal/ai/: __init__.py  client.py  evidence_map.py  prompts.py  schemas.py
backend/paisapal/analysis/: models.py  report.py  rules.py
backend/paisapal/analysis_runs/: __init__.py  evidence_guard.py  mock_pipeline.py  models.py  orchestrator.py  source_coverage.py  step_details.py  validation.py  vcp_summary.py
backend/paisapal/api/: routes.py  schemas.py
backend/paisapal/csv_import/: parser.py  schema.py
backend/paisapal/db/: base.py  models.py  repository.py
backend/paisapal/providers/: alpha_vantage.py  base.py  finnhub.py  fmp.py  fred.py  mock.py  polygon.py  sec_edgar.py  simfin.py  stooq.py  tiingo.py  yahoo.py
backend/tests/: test_ai_output_validation.py  test_analysis_rules.py  test_analysis_run_repository.py  test_analysis_run_validation.py  test_analysis_runs_api.py  test_api.py  test_csv_import.py  test_openai_client.py  test_provider_adapters.py  test_repository.py
docs/superpowers/plans/: 2026-05-14-local-investment-analysis-app.md  2026-05-14-stock-analysis-framework.md  2026-05-15-ai-analysis-quality.md  2026-05-15-fmp-provider-integration.md  (+7 more)
examples/: sample_watchlist.csv
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: import-dashboard-report.spec.ts
frontend/src/: App.test.tsx  App.tsx  styles.css  types.ts
scripts/: dev_backend.sh  dev_frontend.sh
(+33 files in other folders)
